footer contact form updates

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     row-gap: 2vh;
     font-family: var(--font-family-primary);
     font-size: clamp(14px,4vw,48px);
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
     color: var(--font-color);
 }
@@ -276,12 +276,13 @@ footer{
     height: 0;
     transition: all .5s ease-in-out;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    row-gap: clamp(1rem,7.5vh,150px);
     justify-content: center;
     align-items: center;
     width: 100vw;
     font-size: 0;
-    background-image: linear-gradient(to right, #5d8996c9,#87c5c2b6);
+    background-image: linear-gradient(to right, #303d41c9,#87c5c2b6);
 }
 div>form{
     display: none;
@@ -299,6 +300,16 @@ div>form{
     top: 5%;
     transform: rotate(270deg);
 }
+ul{
+    list-style: none;
+}
+.contact-info{
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 .form{
     flex-direction: row;
     /* height: 100vh; */
